--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: base
 ---
 
-<div class="block">
+<div class="block post">
   <div class="container">
     <h1>{{ page.title }}</h1>
     <hr/>
